			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04e: *********************************

BUG: (2/3/06, DN) WindowFrame together with contents remains in memory after close.
FIX: Use new class WeakReferences for storing Listeners.
     Don't use static fields EditMenu.moveFull, EditMenu.moveHals, EdiitMenu.moveQuarter, WindowMenu.closeWindow.
     Added TopLevel.removeFromDesktop, toolBar.setUI(null), menuBar.setUI(null),

IMP: (2/3/06, GVG) NWell resistors in TSMC180.
IMP: (2/3/06, GVG) TSMC180 as subclass of MoCMOS to isolate rules in plugins.
     Renaming tsmc90 plugin to just tsmc.

IMP: (2/2/06, SMR) Created new submenu "Cell / Merge Libraries" and moved
     "Export / Add Exports from Library..." there.  Also added "Replace Cells from Library..."
     which replaces instances in the current cell with like-names ones from another library.

BUG: (2/2/06, GVG) New highligh doesn't draw thick lines.
FIX: Solution allows lines from PolyBase to became thick lines and Highlight.drawOutlineFromPoints
     doesn't depend on thickCenter.

BUG: (1/30/06, GVG) ErrorLogger XML couldn't read cellName if string contains libraryName
IMP: Parsing also library name.

************************* Version 8.04d: *********************************
IMP: (2/1/06, DN) ExplorerTree isn't rebuilt completely on JobTree changes.

BUG: (2/1/06, SMR) HSpice insists on having a ".tr0" file (Bug #805).
FIX: In HSpiceOut.java, use more general method of finding file names.

IMP: (2/1/06, SMR) Removed text window methods from UserInterface.

IMP: (2/1/06, SMR) Technologies with no node groups (from the technology editor)
     have them created automatically in Technology.getNodesGrouped().

BUG: (2/1/06, SMR) Transistors are not placed correctly (Bug #802).
FIX: In EditWindow.showDraggedBox(), adjust preview box.

BUG: (2/1/06, SMR) Regressions fail because of extra technology information.